--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>List</title>
   </head>
   <body>
-    <div class="header-div"></div>
-    <h1>いらっしゃいませ！</h1>
+    <!-- <div class="header-div"></div>
+    <h1>いらっしゃいませ！</h1> -->
 
     <section class="form-section">
       <!-- Form -->
@@ -66,9 +66,9 @@
           </div>
 
           <!-- Mail button -->
-          <div class="form-button">
+          <!-- <div class="form-button">
             <button type="button" id="email">Email</button>
-          </div>
+          </div> -->
         </div>
       </form>
     </section>
