--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>List</title>
   </head>
   <body>
-    <!-- <div class="header-div"></div>
-    <h1>いらっしゃいませ！</h1> -->
+    <div class="header-div"></div>
+    <h1>いらっしゃいませ！</h1>
 
     <section class="form-section">
       <!-- Form -->
@@ -31,7 +31,7 @@
         <!-- Quantity Input -->
         <div class="form-input" id="form-quantity">
           <label for="quantity"></label>
-          <input type="text" id="quantity" placeholder="Qty..." />
+          <input type="text" id="quantity" placeholder="Qty (optional)..." />
         </div>
 
         <!-- Type Input -->
